# floor_play

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
floor/: detector.py  ds_download.py  ds_unzip.py  label_convert.py
tests/: test_detector.py  test_floor.py  test_label_convert.py
