[tool.poetry]
name = "floor"
version = "0.1.0"
description = ""
authors = ["YewtsingMu <mooyewtsing@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
onnxruntime = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
